# inf-homework-1-testing-DanielY19

./: CMakeLists.txt  README.adoc
.github/classroom/: autograding.json
src/: StackDynamicArray.h  solution.cpp  solution.h
test/: StackDynamicArray_test.cpp  solution.cpp
